# NexaPay

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  test_full_flow.js
blockchain/: Cargo.toml  Dockerfile  docker-entrypoint.sh
blockchain/chain_data/: db  snap.0000000000000BDD  snap.000000000004026C
blockchain/chain_state/: nexapay_state.sqlite
blockchain/scripts/: e2e_kyc_two_users.sh  e2e_test.sh
blockchain/src/: block.rs  chain.rs  consensus.rs  crypto.rs  main.rs  storage.rs
blockchain/src/api/: accounts.rs  admin.rs  admin_auth.rs  agent.rs  auth.rs  company.rs  consensus_api.rs  esign.rs  fee.rs  fund.rs  gateway.rs  health.rs  idempotency.rs  invoice.rs  key_management.rs  kyc.rs  kyc_verify.rs  middleware.rs  mod.rs  network.rs  withdraw.rs
blockchain/src/db/: backup.rs  mod.rs  sqlite.rs
blockchain/src/db/migrations/: 202507221500_remove_merchants.sql  202605080001_kyc_identity_records.sql  202605080002_users_kyc_paths.sql  202605100001_company_workspace_owner.sql  202605100002_vendor_requests.sql  202605120001_purge_accounts.sql  202605120002_add_card_last4.sql  202605120003_create_kyc_sessions.sql  202605120004_kyc_session_password_provision.sql  202605121100_agent_funding_withdrawals.sql  202605130001_password_recovery.sql  202605130002_pin_only_auth.sql  202605130003_profile_card_fields.sql  202605130004_notification_reads.sql  202605130005_security_and_bank_transfer.sql  202605130006_agent_rne_doc.sql  (+14 more)
blockchain/src/services/: agent_scorer.rs  kyc_service.rs  liveness_client.rs  mod.rs
(+162 files in other folders)
