[package]
name = "nexapay-node"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
hmac = "0.12"
http = "1"
jwt-simple = "0.12"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sled = "0.34"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
